experiments/04-rate-limiting-realistic/moderate/04-services-moderate.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratelimit-moderate
  namespace: default
spec:
  selector:
    app: ratelimit-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
